--- a/html_client/app.html
+++ b/html_client/app.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Mastercard</title>
         <!-- <link rel="stylesheet" href="./html_client/app.cs"> -->
     </head>
     <body>
@@ -35,7 +35,7 @@
                     }
                 });
             })
-            .catch(err => console.log(err))
+            .catch(err => alert("Error 500. Error en el servidor intentélo más tarde!"))
 
             
 
